src/pages/ru/v1.21.0/configuration/sso.mdx
---
title: "SSO"
metaTitle: "SSO"
metaDescription: "Как настроить единый вход (SSO) через SAML2."
---
import ORDynamicCode from '../../../../components/Code/ORDynamicCode';
export const initialValues = {domain: "YOUR_DOMAIN", tenantKey: "TENANT_KEY", port: "PORT"};
export const ignoreValues = {jumpcloud: "https://sso.jumpcloud.com"};

Единый вход (через SAML2) доступен только в OpenReplay Enterprise Edition и на выделенных (Dedicated) инстансах.

## Настройка поставщика идентификации (IDP)

В панели управления вашего поставщика идентификации создайте новое приложение с именем `openreplay` (вы можете использовать эту <a href="https://docs.openreplay.com/static/OpenReplay.png" target="_blank">иконку</a>). На странице настройки обязательно задайте следующие значения (убедитесь, что вы заменили <code>{initialValues.domain}</code> на правильное значение, например `https://openreplay.mycompany.com`):

| Переменная | Значение |
|----------|-------------|
| ACS URL (также называется Single Sign On URL или Consumer URL) | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/</code> |
| Entity ID (также называется Audience) | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code> |
| Single Logout URL (также называется SLO URL) | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/sls/</code> (необязательно) |
| Name ID (иногда его можно настроить в разделе 'Attribute Statements' или 'Parameters') | `Email`, или `EmailAddress`, или `urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress`, в зависимости от вашего поставщика идентификации |
| SAML initiator | Установите значение `Service Provider` (необязательно) |

В разделе 'Attribute Statements' или 'Parameters' обязательно определите следующие поля:

| Поле | Значение |
|----------|-------------|
| tenantKey | <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code> его значение можно найти в панели управления, в разделе 'Preferences' > 'Account' (Примечание: его следует игнорировать/оставить пустым, если вы используете выделенный/облачный инстанс) |
| firstName | `user.firstName` |
| lastName |  `user.lastName` |
| internalId | Внутренний ID или `user.email` (ID пользователя в вашей системе управления идентификацией) (необязательно) |
| role | Роль пользователя; в зависимости от вашего поставщика идентификации это может быть `user.role`, или `group`, и т. д. (необязательно, значение по умолчанию = `member`) |
| adminPrivileges | Имеет ли пользователь права администратора; если это поле содержит любое значение, отличное от `false`, оно будет считаться равным `true`. (необязательно, значение по умолчанию = `false`) |

Теперь у вас должны быть все необходимые значения для следующего шага/раздела.

## Настройка SSO (SAML2)

Чтобы включить SSO, выполните `openreplay -e`, раскомментируйте, а затем обновите указанные ниже переменные окружения в разделе `chalice`:

| Переменная | Описание |
|----------|-------------|
| idp_entityId | `entityId` вашего поставщика идентификации, также называемый `Issuer URL` |
| idp_sso_url | `singleSignOnService` вашего поставщика идентификации, также называемый `SAML 2.0 Endpoint (HTTP)` |
| idp_x509cert | `x509cert`, должна быть строкой в одну линию, без переносов строк. Вы можете использовать <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">этот инструмент</a> для форматирования вашего значения |
| idp_name | Имя поставщика идентификации (необязательно) |
| idp_sls_url | `singleLogoutService` вашего поставщика идентификации, также называемый `SLO Endpoint (HTTP)` (необязательно) |
| enforce_SSO | Если установлено значение `true`, все подключения с именем пользователя и паролем будут заблокированы (необязательно, значение по умолчанию=`false`) |

Затем сохраните и выйдите с помощью `:wq`, чтобы изменения вступили в силу:

## Сертификат OpenReplay

Это необязательно; вы можете добавить сертификат x509 для дополнительной безопасности SSO:

1. выполните эту команду на вашем сервере или на вашей защищённой машине (вы можете изменить срок действия вашего сертификата в соответствии с вашими потребностями):
```bash
openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout openreplay-sso.key -out openreplay-sso.crt
```
1. На вашем сервере выполните `openreplay -e`
2. В разделе `chalice` добавьте следующие переменные окружения:
- **sp_crt**: должна быть строкой в одну линию, без переносов строк, из сгенерированного файла 'openreplay-sso.crt' (вы можете использовать <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">этот инструмент</a> для форматирования вашего значения)
- **sp_key**: должна быть строкой в одну линию, без переносов строк, из сгенерированного файла 'openreplay-sso.key'
1. Сохраните и выйдите с помощью `:wq`, чтобы изменения вступили в силу
2. Добавьте сгенерированный файл 'openreplay-sso.crt' в конфигурацию приложения вашего поставщика идентификации

## Пример с использованием Okta

1. Войдите в панель администрирования Okta и перейдите в 'Applications' > 'Applications'
2. Нажмите 'Create new app integration', затем выберите SAML 2.0 и нажмите 'Next'
3. Установите 'App Name' в OpenReplay (вы можете загрузить эту <a href="https://docs.openreplay.com/static/OpenReplay.png" target="_blank">иконку</a>) для вашего приложения), затем нажмите 'Next'
4. Установите:
 - **Single sign on URL** в <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/</code>
 - **Audience URI (SP Entity ID)** в <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code>
 - **Name ID format** в `EmailAddress`
5. Определите указанные ниже поля в 'Attribute Statements':
 - **tenantKey**: формат `Basic`, и установите значение в <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>, которое находится в панели управления OpenReplay в разделе 'Preferences' > 'Account' (Примечание: его следует игнорировать/оставить пустым, если вы используете выделенный/облачный инстанс).
 - **firstName**: формат `Basic`, и установите значение в `user.firstName`
 - **lastName**: формат `Basic`, и установите значение в `user.lastName`
 - **internalId**: формат `Basic`, и установите значение в `user.email`
6. Определите указанное ниже поле в 'Group Attribute Statements':
 - **role**: формат `Basic`, фильтр `Match Regex`, значение `.*` (или вы можете указать другой фильтр и регулярное выражение в соответствии с вашими потребностями)
 - **adminPrivileges**: формат `Basic`, фильтр `Match Regex`, значение `admin` (текущий пользователь будет иметь `admin privileges`, если он входит в группу **admin**)
7. Нажмите Next, выберите 'I'm an Okta customer adding an internal app' и 'This is an internal app that we have created', затем нажмите 'Finish'
8. На вкладке Sign On прокрутите вниз и нажмите 'View Setup Instructions', чтобы увидеть вашу конфигурацию SAML2
9. На вашем сервере выполните `openreplay -e`
10. В разделе `chalice` раскомментируйте, а затем установите следующие переменные окружения:
   - **idp_entityId**: Identity Provider Issuer
   - **idp_sso_url**: Identity Provider Single Sign-On URL
   - **idp_x509cert**: X.509 Certificate, должна быть строкой в одну линию, без переносов строк (вы можете использовать <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">этот инструмент</a> для форматирования вашего значения)
   - **idp_name**: Okta
12. Наконец, сохраните и выйдите с помощью `:wq`, чтобы изменения вступили в силу.

## Пример с использованием Azure Active Directory

1. Войдите в портал Azure и перейдите в 'Azure Active Directory'
2. Нажмите '+ Add', выберите 'Enterprise application', затем нажмите 'Create your own application'
3. Установите 'App Name' в OpenReplay, затем выберите 'Integrate any other application you don't find in the gallery (Non-gallery)' и нажмите 'Create'
4. Перейдите в 'Single sign-on' в меню слева и задайте указанные ниже значения в блоке 'Basic SAML Configuration':
 - **Identifier (Entity ID)** в <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code>
 - **Reply URL (Assertion Consumer Service URL)** в <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/</code>
 - **Logout URL** в <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/sls/</code>
5. Добавьте указанные ниже утверждения (claims) в блок 'Attribute & Claims' и убедитесь, что поле 'Namespace' оставлено пустым для каждого из них:
 - **tenantKey**: установите значение в <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>, которое находится в панели управления OpenReplay в разделе 'Preferences' > 'Account' (Примечание: его следует игнорировать/оставить пустым, если вы используете выделенный/облачный инстанс).
 - **firstName**: установите значение в `user.givenname`
 - **lastName**: установите значение в `user.surname`
 - **internalId**: установите значение в `user.mail`
6. Перейдите в 'Users and groups' и назначьте выбранных вами пользователей приложению
7. Теперь подключитесь по SSH к вашей установке OpenReplay и выполните `openreplay -e`
8. В разделе `chalice` раскомментируйте, а затем установите следующие переменные окружения (значения находятся в 'Azure Active Directory' > 'OpenReplay' > 'Single sign-on'):
   - **idp_entityId**: Azure AD Identifier
   - **idp_sso_url**: Login URL
   - **idp_sls_url**: Logout URL
   - **idp_x509cert**: X.509 Certificate, должна быть строкой в одну линию, без переносов строк (вы можете использовать <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">этот инструмент</a> для форматирования вашего значения)
   - **idp_name**: Active Directory
9.  Наконец, сохраните и выйдите с помощью `:wq`, чтобы изменения вступили в силу

## Пример с использованием Google Workspace (ранее G Suite)

#### Добавление пользовательских атрибутов:

1. В консоли администратора Google перейдите в 'Directory' > 'Users' > 'More options' > 'Manage custom attributes'.
2. Нажмите 'Add Custom Attribute'.
3. Задайте следующие поля:
 - **Category**: 'OpenReplay'
 - **Custom fields**:
- **Name**: 'role'
- **Info type**: 'Text'
- **Visibility**: 'Visible to user and admin'
- **No. of values**: 'Single-value'
 - **Custom fields**:
- **Name**: 'adminPrivileges'
- **Info type**: 'Yes or No'
- **Visibility**: 'Visible to user and admin'
- **No. of values**: 'Single-value'
4. Нажмите 'Add'
5. Чтобы добавить значения для новых пользовательских атрибутов, перейдите в 'Users'
6. Выберите нужного пользователя (пользователей)
7. Нажмите 'User information', затем отредактируйте раздел 'OpenReplay'
8. Измените значение **role** на нужную роль в 'OpenReplay' (роль должна совпадать с той, что создана в панели управления OpenReplay в разделе 'Preferences' > 'Roles')
9. Измените значение **adminPrivileges** на 'Yes', если пользователю разрешено иметь права администратора в OpenReplay
10. Нажмите 'Save'

#### Настройка:

1. Войдите в консоль администратора Google и перейдите в 'Apps'
2. Нажмите 'Web and mobile apps', затем нажмите 'Add app' > 'Add custom SAML app'
3. Установите 'App name' в OpenReplay (вы можете загрузить эту <a href="https://docs.openreplay.com/static/OpenReplay.png" target="_blank">иконку</a> для 'App icon'') затем нажмите 'Continue'
4. Скопируйте 'SSO URL', 'Entity ID' и 'Certificate', затем нажмите 'Continue' (мы будем использовать эти значения на шаге 11)
5. Установите:
 - **ACS URL** в <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/>/</code> (<code>{initialValues.tenantKey}</code> находится в панели управления OpenReplay в разделе 'Preferences' > 'Account'. Примечание: его следует игнорировать/оставить пустым, если вы используете выделенный/облачный инстанс.)
 - **Entity ID** в <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code>
 - **Name ID format** в `Email`
 - **Name ID** в `Basic information > Primary Email`
6. Нажмите 'Continue', затем нажмите 'Add Mapping', чтобы добавить указанные ниже атрибуты:
 - `Basic information > First Name` -> **firstName**
 - `Basic information > Last Name` -> **lastName**
 - `Basic information > Primary Email` -> **internalId**
 - `OpenReplay > role` -> **role**
 - `OpenReplay > adminPrivileges` -> **adminPrivileges**
7. Нажмите 'Finish'
8.  В консоли администратора Google перейдите в 'Apps' > 'Web and mobile apps' и выберите 'OpenReplay'
9.  Нажмите 'User access', выберите 'ON for everyone', затем нажмите 'Save'
10. На вашем сервере выполните `openreplay -e`
11. В разделе `chalice > env` раскомментируйте и установите следующие атрибуты, используя значения с шага 4:
   - **idp_sso_url**: вставьте значение 'SSO URL'
   - **idp_entityId**: вставьте значение 'Entity ID'
   - **idp_x509cert**: используйте <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">этот инструмент</a> для форматирования скопированного/загруженного сертификата
   - **idp_name**: установите значение в `G-Suite`
   - **idp_tenantKey**: <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code> находится в панели управления OpenReplay в разделе 'Preferences' > 'Account' (Примечание: его следует игнорировать/оставить пустым, если вы используете выделенный/облачный инстанс).
15. Наконец, сохраните и выйдите с помощью `:wq`, чтобы изменения вступили в силу.

## Пример с использованием JumpCloud

1. Войдите в панель администрирования JumpCloud и в меню слева перейдите в 'SSO'
2. Нажмите '+ Add New Application', затем выберите 'Custom SAML App'
3. Установите 'Display Label' в OpenReplay (вы можете загрузить эту <a href="https://docs.openreplay.com/static/OpenReplay150x150.png" target="_blank">иконку</a> для вашего приложения), затем перейдите на вкладку 'SSO'
4. Установите:
- **IdP Entity ID** в <code>openreplay/<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>
- **SP Entity ID** в <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code>
- **ACS URL** в <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/</code>
- **SAMLSubject NameID** в `email`
- **SAMLSubject NameID Format:** в `urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress`
- **Signature Algorithm** в `RSA-SHA256`
- Отметьте **Sign Assertion**
- **IDP URL** должен заканчиваться на <code>openreplay-<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code> (это значение нельзя изменить позже)
4. Если вы следовали инструкциям <a href="#openreplay-certificate">OpenReplay-Certificate</a>, вы можете загрузить сгенерированный файл 'openreplay-sso.crt', нажав 'Upload SP Certificate'; в противном случае пропустите этот шаг
5. Определите указанные ниже поля в 'USER ATTRIBUTE MAPPING', нажав кнопку 'add attribute':
- **firstName**: установите значение в `firstname`
- **lastName**: установите значение в `lastname`
- **internalId**: установите значение в `email`
- **role**: необязательно, роль пользователя в OpenReplay; если это постоянное значение для всех пользователей, вам следует определить его на следующем шаге,
в противном случае вам нужно добавить новый строковый атрибут в группу JumpCloud, назвать его `OpenReplayRole` и установить значение в имя роли, а затем в конфигурации SSO выбрать 'Custom User or Group Attribute' и установить значение в `OpenReplayRole`.
- **adminPrivileges**: необязательно; если это постоянное значение для всех пользователей, вам следует определить его на следующем шаге, в противном случае вам нужно добавить новый булев атрибут в группу JumpCloud, назвать его `OpenReplayAdminPrivileges` и установить значение в имя роли, а затем в конфигурации SSO выбрать 'Custom User or Group Attribute' и установить значение в `OpenReplayAdminPrivileges`.
6. Определите указанные ниже поля в 'CONSTANT ATTRIBUTES', нажав кнопку 'add attribute':
- **tenantKey**: установите значение в <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>, которое находится в панели управления OpenReplay в разделе 'Preferences' > 'Account' (Примечание: его следует игнорировать/оставить пустым, если вы используете выделенный/облачный инстанс).
- **role**: необязательно, пропустите, если определено на предыдущем шаге; роль пользователя в OpenReplay, должна совпадать с именем роли, уже определённым в OpenReplay (значение по умолчанию = `member`)
- **adminPrivileges**: необязательно, пропустите, если определено на предыдущем шаге; установите значение в `true`, если вы хотите предоставить новым пользователям права администратора, `false`, если нет
(значение по умолчанию = `false`)
7. На этом этапе вы можете перейти на вкладку 'User Groups' и выбрать группу пользователей, которая будет иметь доступ к OpenReplay, или вы можете сделать это позже
8. Нажмите 'activate' и 'continue' во всплывающем окне подтверждения
9. Нажмите на иконку нового приложения OpenReplay, затем в выпадающем списке слева 'IDP Certificate Valid' выберите 'Download certificate'
9. На вашем сервере выполните `openreplay -e`
10. В разделе `chalice` раскомментируйте, а затем установите следующие переменные окружения:
- **idp_entityId**: <code>openreplay/<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>
- **idp_sso_url**: <code>{ignoreValues.jumpcloud}/saml2/openreplay-<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>
- **idp_x509cert**: загруженный сертификат, должна быть строкой в одну линию, без переносов строк (вы можете использовать <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">этот инструмент</a> для форматирования вашего значения)
- **idp_name**: JumpCloud
12. Наконец, сохраните и выйдите с помощью `:wq`, чтобы изменения вступили в силу.

## Ошибки

### The response was received at http instead of http

Это очень распространённая ситуация, вызванная отсутствием заголовка 'X-Forwarded-Proto' в запросе. Чтобы решить эту проблему, убедитесь, что балансировщик нагрузки корректно перенаправляет заголовок на бэкенд OpenReplay.
